# Teaching-Assistance-Application-Cpp17

./: .gitignore  ASSISTANTS.csv  CMakeLists.txt  COURSES.csv  README.md  assistant.h  data.h  lecturer.h  main.cpp  optimalSOLUTION.csv
src/: course.h  csvio.h  greedysolver.h  main.cpp  optimalsolver.h
